test/code/test_infinite_loop.out

Parse error: syntax error, unexpected ';' in {{CWD}}/test/code/test_infinite_loop.php on line 2
