test/code/test_infinite_loop.php
<?php
print_r(array_change_key_case(array("fIrSt" => 10, "sEcOnD" => 20), 100);

